[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "petstorecommon"
version = "0.0.PACKAGE_VERSION"
authors = [
  { name="Chris Tremblay", email="chris.tremblay@microsoft.com" },
]
description = "A sample petstore package"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/pypa/sampleproject"